# threatFlix

./: .gitignore  README.md  SYSTEM_ARCHITECTURE.md
Backend/: .env  .env.example  package-lock.json  package.json  test.ps1  tsconfig.json
Backend/data/: threatflix.db-shm  threatflix.db-wal
Backend/models/service/: README.md  app.py  contracts.py  pyproject.toml  requirements.txt  test_app.py  test_contracts.py
Backend/models/service/threatflix_ueba/: __init__.py  app.py  cli.py  contracts.py
Backend/scripts/: backfill-graph-similarity.ts  evaluate-graph-similarity.ts  export-graph-validation-corpus.ts  seed-demo-customer.ts  seed-judge-demo.ts
Backend/src/: app.ts  config.ts  seed.ts  server.ts
Backend/src/ai/: analyzer.ts  evidenceEngine.test.ts  evidenceEngine.ts  featureExtractor.ts  incidentGraph.ts  llmContext.test.ts  llmContext.ts  llmWorker.ts  mitre.ts  mlClient.test.ts  mlClient.ts  (+8 more)
Demo/: README.md  attack-scenarios.ts  bunfig.toml  mitre-techniques.ts  package.json  runner.ts  tsconfig.json
FrontEnd/: README.md  index.html  package-lock.json  package.json  tsconfig.json
FrontEnd/src/: App.tsx  index.css
JudgeDemo/: README.md  attack_runner.py  package.json  record_demo.mjs  server.ts  start_demo.ps1  threatflix.ts
JudgeDemo/public/: app.js  index.html  presentation.html  styles.css
ML/: README.md  feature_extractor.py  generate_dataset.py  pyproject.toml  requirements.txt  review_results.py  test_generate_dataset.py  test_train.py  train.py
ML/graph_evaluation/: __init__.py  test_validate_wl.py  validate_wl.py
SDK/: .gitignore  INTEGRATION_GUIDE.md  README.md  bunfig.toml  package.json  tsconfig.json
SDK/examples/: example-auth.ts  example-brute-force-demo.ts  example-generic-events.ts
SDK/src/: index.test.ts  index.ts  types.ts
docs/wiki/: Home.md
(+86 files in other folders)
